istio_demo/egress/samples/simple-login.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-login-svc
  labels:
    app: simple-login
spec:
  ports:
  - name: http
    port: 8033
  # Port 9002 is omitted intentionally for testing the pass through filter chain.
  selector:
    app: simple-login
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-login
  labels:
    app: simple-login
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-login
      version: v1
  template:
    metadata:
      labels:
        app: simple-login
        version: v1
    spec:
      containers:
      - name: simple-login
        image: docker.io/whitewalker0506/simple_login:1.0.0
        imagePullPolicy: IfNotPresent
        args: [ "10.0.1.101", "3308" ]
        ports:
        - containerPort: 8033
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: simple-login-v2
#   labels:
#     app: simple-login
#     version: v2
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: simple-login
#       version: v2
#   template:
#     metadata:
#       labels:
#         app: simple-login
#         version: v2
#     spec:
#       containers:
#       - name: simple-login
#         image: docker.io/whitewalker0506/simple_login:1.0.0
#         imagePullPolicy: IfNotPresent
#         args: [ "10.0.1.101", "3308" ]
#         ports:
#         - containerPort: 8033
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: simple-login-dr
# spec:
#   host: "simple-login-svc.default.svc.cluster.local"
#   trafficPolicy:
#     loadBalancer:
#       simple: LEAST_CONN
#   subsets:
#   - name: prodversion
#     labels:
#       version: v1
#     trafficPolicy:
#       loadBalancer:
#         simple: ROUND_ROBIN
#   - name: testversion
#     labels:
#       version: v2
#     trafficPolicy:
#       loadBalancer:
#         simple: RANDOM
# ---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-login-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - simple-login-gateway
  http:
  - name: "simple-login-v1-routes"
    match:
    - uri: 
        exact: /index
    - uri: 
        exact: /internal
    - uri: 
        exact: /v1/login
    - uri: 
        exact: /v1/logout
    # redirect:
    #   uri: /index
    route:
    - destination:
        host: simple-login-svc.default.svc.cluster.local
        port:
          number: 8033
        #subset: v1
      #weight: 100
  # - name: "simple-login-v2-routes"
  #   match:
  #   - uri: 
  #       exact: /v2
  #   - uri: 
  #       exact: /internal
  #   - uri: 
  #       exact: /v1/login
  #   - uri: 
  #       exact: /v1/logout
  #   route:
  #   - destination:
  #       host: simple-login-svc.default.svc.cluster.local
  #       port:
  #         number: 8033
  #       subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simple-login-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
